# hpgcc_template

./: .gitignore  CMakeLists.txt  hpgcc.cmake
src/: hiworld.c
